--- a/DatingApp.Application/DatingApp.Application.csproj
+++ b/DatingApp.Application/DatingApp.Application.csproj
@@ -2,6 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatingApp.Domain\DatingApp.Domain.csproj" />
+	<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
   <PropertyGroup>
