--- a/DatingApp.Api/appsettings.json
+++ b/DatingApp.Api/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "TokenKey": "super secret ungeuassable keysuper secret ungeuassable keysuper secret ungeuassable keysuper secret ungeuassable key",
+    "AllowedHosts": "*"
 }
