-Added Automapper to project to help map between models and DTO's -Created repository pattern to simplify code in controllers -Added DTO's for Member and Photo

--- a/DatingApp.Application/DatingApp.Application.csproj
+++ b/DatingApp.Application/DatingApp.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatingApp.Domain\DatingApp.Domain.csproj" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
   </ItemGroup>
 
