--- a/DatingApp.Infrastructure/DatingApp.Infrastructure.csproj
+++ b/DatingApp.Infrastructure/DatingApp.Infrastructure.csproj
@@ -14,6 +14,10 @@
     <ProjectReference Include="..\DatingApp.Domain\DatingApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
