--- a/DatingApp.Api/appsettings.json
+++ b/DatingApp.Api/appsettings.json
@@ -6,5 +6,10 @@
         }
     },
     "TokenKey": "super secret ungeuassable keysuper secret ungeuassable keysuper secret ungeuassable keysuper secret ungeuassable key",
+    "CloudinarySettings": {
+        "CloudName": "dofdnphue",
+        "ApiKey": "172743935121731",
+        "ApiSecret": "X5yEDOdBuaHMkA62rVLh34ps5FE"
+    },
     "AllowedHosts": "*"
 }
