--- a/DatingApp.Application/DatingApp.Application.csproj
+++ b/DatingApp.Application/DatingApp.Application.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+	  <PackageReference Include="CloudinaryDotNet" Version="1.27.4" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <ProjectReference Include="..\DatingApp.Domain\DatingApp.Domain.csproj" />
     <PackageReference Include="AutoMapper" Version="14.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
