--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+DatingApp.Api/appsettings.json
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -482,3 +483,4 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+
