Removed appsettings.json from repository and updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,8 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 
+DatingApp.Api/appsettings.json
+DatingApp.Api/appsettings.json
+DatingApp.Api/appsettings.json
+DatingApp.Api/appsettings.json
+DatingApp.Api/appsettings.json
