Member list: -Sorting added -Filtering added
API:
-Now correctly updates "last active" field in database

--- a/DatingApp.Infrastructure/DatingApp.Infrastructure.csproj
+++ b/DatingApp.Infrastructure/DatingApp.Infrastructure.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DatingApp.Application\DatingApp.Application.csproj" />
     <ProjectReference Include="..\DatingApp.Domain\DatingApp.Domain.csproj" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
