--- a/DatingApp.Infrastructure/DatingApp.Infrastructure.csproj
+++ b/DatingApp.Infrastructure/DatingApp.Infrastructure.csproj
@@ -8,6 +8,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.4.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
